<resources>

    <string name="liberia_app_name">Liberia CFC</string>
    <string name="liberia_login_title">Liberia CFC Monitor</string>
    <string name="liberia_nav_logo">Liberia CFC Monitor</string>
    <string name="tanzania_app_name">Boresha Afya</string>
    <string name="tanzania_login_title">Boresha Afya</string>
    <string name="tanzania_nav_logo">Boresha Afya</string>

    <string name="login_title">CFC App</string>
    <string name="nav_logo">CFC App</string>
    <string name="logo">logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="title_family_detail">Family Detail</string>
    <string name="child_register_title">Child Clients</string>
    <string name="return_to_all_children">Return to all children</string>
    <string name="back_to_children">Back to %1$s</string>
    <string name="child_details">Child details %1$s</string>
    <string name="not_given">Not given</string>
    <string name="not_provided">Not provided</string>
    <string name="given">Given</string>
    <string name="provided_on">Provided on %1$s</string>
    <string name="given_on">Given on %1$s</string>
    <string name="search_name_or_id">Search name or ID</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="action_log_out">Logging Out</string>
    <string name="action_start_sync">Sync Started</string>
    <string name="action_sync_failed">Sync Failed</string>

    <!-- Navigation Strings -->
    <string name="nav_registers">Registers</string>
    <string name="nav_logout_as">Logout as</string>
    <string name="nav_sync">Sync</string>
    <string name="nav_last">"Last: </string>
    <string name="nav_last_sync_time">HH:mm a , MMM DD</string>

    <string name="call">Call</string>
    <string name="call_no_number_provider">(no number provider)</string>
    <string name="family_details">Family details</string>
    <string name="add_new_family_member">Add new family member</string>
    <string name="remove_existing_family_member">Remove existing family member</string>
    <string name="change_family_head">Change family head</string>
    <string name="change_primary_caregiver">Change primary caregiver</string>
    <string name="add_other_family_member">Other family member</string>
    <string name="add_child_under_five">Child under 5 years</string>
    <string name="child_under_five">Child under 5 years</string>
    <string name="go_to_family_s_profile">Go to family\'s profile</string>
    <string name="family_has_nothing_due">Family has nothing due</string>
    <string name="family_has_services_due">Family has services due</string>
    <string name="vaccine_service_overdue"><![CDATA[%1$s <font color=#f04646>overdue (%2$s)</font></b>]]></string>
    <string name="vaccine_service_due"><![CDATA[%1$s <font color=#000000>due (%2$s)</font></b>]]></string>
    <string name="vaccine_service_upcoming"><![CDATA[%1$s <font color=#7f7f7f>upcoming (%2$s)</font></b>]]></string>

    <string name="family_has_service_overdue"><![CDATA[Family has <font color=#FF0000>services overdue</font></b>]]></string>
    <string name="view_upcoming_services">View upcoming services</string>
    <string name="upcoming_services">Upcoming Services</string>
    <string name="overdue_3_oct">overdue(3 oct)</string>
    <string name="penta_1">Penta 1</string>
    <string name="view_medical_history">View medical history</string>
    <string name="last_visit_40_days_ago">Last visit %1$s ago</string>
    <string name="add_member_title">Add family member</string>
    <string name="add_member_title_question">What kind of family member do you want to add?</string>
    <string name="change_head_member_title">Change family head</string>
    <string name="change_head_member_title_question">Select a new family head</string>
    <string name="change_caregiver_member_title">Change primary caregiver</string>
    <string name="change_caregiver_member_title_question">Select a new primary caregiver</string>
    <string name="remove_member_title">Remove member</string>
    <string name="remove_member_prompt">Which member do you want to remove?</string>
    <string name="visit_month">%1$s visit done</string>
    <string name="not_visiting_this_month">Not visiting this month</string>
    <string name="undo">UNDO</string>
    <string name="record_visit">Record visit</string>
    <string name="edit">EDIT</string>
    <string name="return_to_family_name">Return to %1$s Family</string>
    <string name="return_to_family_members">Return to family members</string>
    <string name="save_title">SAVE</string>

    <string name="allow_calls_denied">Kindly allow calls to be made here</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="copied_phone_number">PhoneNumber copied to clipboard</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="visit_not_done_btn_child_profile">Visit not done</string>
    <string name="medical_history">Medical History</string>
    <string name="record_home_visit">Record \nHome visit</string>
    <string name="visit_not_done">Visit not \ndone</string>
    <string name="visit_done">Visit done</string>
    <string name="due_visit">Last visit \n %1$s</string>
    <string name="medical_title">Back to %1$s</string>
    <string name="medical_last_visit">%1$s ago</string>
    <string name="growth_and_nutrition">GROWTH AND NUTRITION</string>
    <string name="immunization">IMMUNIZATION</string>
    <string name="fully_immunized_at_age">Fully immunized at age %1$s</string>
    <string name="add_date_separately">+ ADD DATE FOR EACH VACCINE</string>
    <string name="which_vaccines_given_text">Which vaccinations were done?</string>
    <string name="when_vaccines_given_text">When were vaccinations done?</string>
    <string name="fully_immunized_at_age_2">Fully immunized at age 2</string>
    <string name="fully_immunized_at_age_1">Fully immunized at age 1</string>
    <string name="health_child_milestone">Healthy child milestone</string>
    <string name="exclusive_feeding">Did the child receive any liquid or food other than breastmilk yesterday and last night?</string>
    <string name="vitamin_given">When was %1$s given?</string>
    <string name="exclusive_breastfeeding">Exclusive breastfeeding</string>
    <string name="vitamin_a">Vitamin A</string>
    <string name="deworming">Deworming</string>
    <string name="record_immunizations">Record vaccinations</string>
    <string name="tab_text_1">DASHBOARD</string>
    <string name="tab_text_2">GUIDEBOOKS</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="updating">Updating....</string>
    <string name="birth_certification">Birth certification</string>
    <string name="observations_illness_episodes"><![CDATA[Observations & Illness - <i>optional</i>]]></string>
    <string name="observations_illness_episodes_medical"><![CDATA[Observations & Illness Episodes]]></string>
    <string name="home_visit_suffix"> &#183; Home Visit</string>
    <string name="last_visit_prefix">Last visit %1$s ago</string>

    <string name="profile_activity_completed">Completed on %s</string>
    <string name="interpunct">・</string>
    <string name="home_visit">Home Visit</string>
    <string name="profile_activity_not_visited">Marked not visited on %s</string>

    <string name="day">day</string>
    <string name="days">days</string>
    <string name="week">week</string>
    <string name="weeks">weeks</string>
    <string name="month">month</string>
    <string name="months">months</string>
    <string name="year">year</string>
    <string name="years">years</string>

    <string name="family">%s Family</string>
    <string name="remove_entire_family">Removing entire family</string>
    <string name="remove_warning_family">Are you sure you want to remove the %s Family\'s record? This will remove the family\'s entire record AND all of the %s family members\' health records from your device. This action cannot be undone.</string>
    <string name="cancel">CANCEL</string>
    <string name="submit">SUBMIT</string>
    <string name="profile_change_dialog_message">Before you remove this member, you must select a new family head.</string>
    <string name="select_caregiver">Select a new primary caregiver</string>
    <string name="select_family_head">Select a new family head</string>
    <string name="remove_caregiver_warning_message">Before you remove this member you must select a new primary caregiver</string>
    <string name="remove_familyhead_warning_message">Before you remove this member you must select a new family head.</string>

    <string name="visit_months">months</string>
    <string name="visit_dose">dose</string>
    <string name="visit_pack">pack</string>
    <string name="visit_exclusive_breastfeeding">Exclusive breastfeeding</string>
    <string name="visit_mnp_dose">MNP dose</string>
    <string name="visit_vitamin_a_dose">Vitamin A dose</string>
    <string name="visit_deworming_dose">Deworming dose</string>

    <string name="growth_nutrition">Growth and Nutrition</string>
    <string name="dose_not_given">DOSE NOT GIVEN</string>
    <string name="has_birt_cert">Has birth certificate?</string>
    <string name="issuance_date">Issuance date</string>
    <string name="number">Number</string>
    <string name="notification">Birth notification done?</string>
    <string name="call_prompt">CALL %s</string>
    <string name="head_of_family">Head of family</string>
    <string name="care_giver">Caregiver</string>
    <string name="status_saving">Saving</string>
    <string name="fill_earler_immunization"><![CDATA[<i>Record earlier immunizations</i>]]></string>
    <string name="confirm_remove_text">Are you sure you want to remove %s\'s record? This will remove their entire health record from your device. This action cannot be undone.</string>
    <string name="remove">REMOVE</string>
    <string name="birth_date">Birth Date</string>
    <string name="age">Age</string>
    <string name="when_vaccine">When was %s immunization done?</string>
    <string name="no_vaccines_were_done">No vaccines were done</string>
    <string name="edit_member_form_title">Edit Family Member</string>

    <string name="last_visit">LAST VISIT</string>
    <string name="edit_child_form_title">Edit Child Under 5</string>
    <string name="birth_cert_value">Does the child have a birth certificate? %s</string>
    <string name="birth_cert_date">Birth certificate issuance date: %s</string>
    <string name="birth_cert_number">Birth certificate number: %s</string>
    <string name="birth_cert_notification">Was the birth notification done? %s</string>
    <string name="birth_cert_note_1">Ask to see the birth notification and instruct the caregiver to register the birth at County Health.</string>
    <string name="birth_cert_note_2">Instruct the caregiver to have the birth registered at County Health.</string>
    <string name="illness_date_with_value">Date: %s</string>
    <string name="illness_des_with_value">Description: %s</string>
    <string name="illness_action_value">Action taken: %s</string>
    <string name="initial_breastfeed_value">Early initiation breastfeeding: %s</string>

    <string name="vaccination_done_earlier">Vaccination done earlier</string>
    <string name="vaccines_not_done">VACCINES NOT DONE</string>
    <string name="set">Set</string>
    <string name="remove_family_count">%s adults and %s U5 children</string>
    <string name="not_given_with_spaces">&#160;not given&#160;</string>
    <string name="given_on_with_spaces">&#160;given on&#160;</string>

</resources>
