<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <RelativeLayout
        android:id="@+id/last_visit_row"
        android:padding="20dp"
        android:background="@drawable/list_item_background_selctor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/tick_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/childrow_history"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            />
        <ImageView
            android:id="@+id/arrow_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/row_goto"
            />
        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/textview_last_vist_day"
            style="@style/CustomFontTextViewStyle.ClientList.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_toRightOf="@+id/tick_image"
            android:layout_marginLeft="10dp"
            android:text="@string/last_visit_40_days_ago"
            android:textColor="@android:color/black" />
        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/text_view_medical_hstory"
            style="@style/CustomFontTextViewStyle.ClientList.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tick_image"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/textview_last_vist_day"
            android:text="@string/view_medical_history"
            android:textColor="@color/light_grey_text"
            android:textSize="12sp" />

    </RelativeLayout>
    <View
        android:id="@+id/last_visit_view"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/light_grey"
        android:layout_below="@+id/last_visit_row"
        />
    <RelativeLayout
        android:id="@+id/penta_1_row"
        android:layout_below="@+id/last_visit_view"
        android:padding="20dp"
        android:background="@drawable/list_item_background_selctor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/cross_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/childrow_upcoming"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            />
        <ImageView
            android:id="@+id/right_arrow_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/row_goto"
            />
        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/textview_penta_1"
            style="@style/CustomFontTextViewStyle.ClientList.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_toRightOf="@+id/cross_image"
            android:layout_marginLeft="10dp"
            android:text="@string/penta_1"
            android:textColor="@android:color/black" />
        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/textview_penta_1_status"
            style="@style/CustomFontTextViewStyle.ClientList.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_toRightOf="@+id/textview_penta_1"
            android:text="@string/overdue_3_oct"
            android:textColor="@color/visit_status_over_due" />
        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/text_view_upcoming_service"
            style="@style/CustomFontTextViewStyle.ClientList.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/cross_image"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/textview_penta_1"
            android:text="@string/view_upcoming_services"
            android:textColor="@color/light_grey_text"
            android:textSize="12sp" />

    </RelativeLayout>
    <View
        android:id="@+id/penta_view"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/light_grey"
        android:layout_below="@+id/penta_1_row"
        />
    <RelativeLayout
        android:id="@+id/family_has_row"
        android:layout_below="@+id/penta_view"
        android:background="@drawable/list_item_background_selctor"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/family_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/childrow_family"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            />
        <ImageView
            android:id="@+id/family_arrow_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/row_goto"
            />
        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/textview_family_has"
            style="@style/CustomFontTextViewStyle.ClientList.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_toRightOf="@+id/family_image"
            android:layout_marginLeft="10dp"
            android:text="@string/family_has_nothing_due"
            android:textColor="@android:color/black" />
        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/text_view_family_profile"
            style="@style/CustomFontTextViewStyle.ClientList.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/family_image"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/textview_family_has"
            android:text="@string/go_to_family_s_profile"
            android:textColor="@color/light_grey_text"
            android:textSize="12sp" />

    </RelativeLayout>
    <View
        android:id="@+id/family_view"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/light_grey"
        android:layout_below="@+id/family_has_row"
        />

</RelativeLayout>