<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">


    <RelativeLayout
        android:id="@+id/nav_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="#2c2c2c"
        app:itemBackground="@drawable/drawer_item_background"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        app:theme="@style/WcaroTheme.AppBarOverlay.NavigationDrawerStyle">

        <RelativeLayout
            android:fitsSystemWindows="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rlLogo"
                android:paddingTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true">

                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:visibility="gone"
                    app:srcCompat="@mipmap/ic_launcher"
                    android:contentDescription="@string/nav_logo" />

                <TextView
                    android:id="@+id/tvLogo"
                    android:layout_margin="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:textColor="@color/light_grey"
                    android:text="@string/nav_logo"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

            </RelativeLayout>

            <View
                android:id="@+id/vDiv1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/rlLogo"
                android:background="#000000" />

            <RelativeLayout
                android:id="@+id/rlMid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vDiv1"
                android:layout_above="@+id/rlSync">

                <TextView
                    android:id="@+id/tvRegisters"
                    android:layout_margin="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/nav_registers"
                    android:textSize="24sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvOptions"
                    android:layout_margin="15dp"
                    android:layout_below="@+id/tvRegisters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <View
                    android:id="@+id/vDiv2"
                    android:layout_below="@+id/rvOptions"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#000000" />

                <TextView
                    android:id="@+id/tvLogout"
                    android:layout_below="@+id/vDiv2"
                    android:layout_margin="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nav_logout_as"
                    android:textSize="16sp"/>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rlSync"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#3d3d3d"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/ivSyncIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    app:srcCompat="@mipmap/ic_launcher"
                    android:clickable="true"
                    android:contentDescription="@string/nav_sync"
                    android:focusable="true" />

                <TextView
                    android:id="@+id/tvSync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_toEndOf="@+id/ivSyncIcon"
                    android:text="@string/nav_sync"
                    android:textColor="@color/white"
                    android:clickable="true"
                    android:textSize="18sp"
                    android:focusable="true" />

                <TextView
                    android:id="@+id/tvSyncTimeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/tvSyncTime"
                    android:text="@string/nav_last"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvSyncTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/nav_last_sync_time"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </RelativeLayout>
        </RelativeLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
